Fix tab item spacing for medium screens

--- a/src/components/How/how.css
+++ b/src/components/How/how.css
@@ -34,7 +34,7 @@
   padding: 12px 20px;
 }
 
-.expanded {
+/* .expanded {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -45,7 +45,7 @@
   padding: 0.875em 1.15em;
   line-height: 1;
   font-weight: 500;
-}
+} */
 .active-tab {
   display: flex;
   align-items: center;
@@ -103,6 +103,12 @@
     -webkit-border-radius: 50%;
     border-radius: 50%;
     background-color: hsl(11deg 92% 80%);
+  }
+  .tab-item {
+    background-color: hsl(0deg 0% 100%);
+    border-radius: 25px;
+    padding: 0.875em 1.15em;
+    line-height: 1;
   }
 }
 @media screen and (max-width: 767px) {
