--- a/src/components/How/tabCard.css
+++ b/src/components/How/tabCard.css
@@ -19,3 +19,10 @@
 
   object-fit: cover;
 }
+
+@media screen and (max-width: 991px) {
+  .how-tab-content-wrapper {
+    padding: 1rem;
+    font-weight: 400;
+  }
+}
